namtq-WH-import-request